NativeSkiaOutputDeviceOpenGL: Fix leaking X11 Pixmap

Pick-to: 6.8
Fixes: QTBUG-135047
Change-Id: I42b6387407551079241350661adadedf7d71a303
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit dbf459268d4bbc20e0a7e83e7889e0f6da79cf84)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>